# AI_devs4

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
S01E01/: S01E01_solution.py  a.ipynb  llm_config.py  llm_prompts.md  main.py  people_filtered.csv  people_tagged.csv  token_estimator.py
S01E02/: 12.ipynb  121.ipynb  Miejscowo-Szer-Dlug.csv  Miejscowo-Szer-Dlug.json  S01E02_solution.py  config.py  findhim_locations.json  helper.py  main.py
S01E03/: README.md  config.py  helper.py  main.py  requirements.txt  t_s01e03.ipynb
S01E04/: 14.ipynb  config.py  helper.py  llm.py  main.py  vision.ipynb
S01E05/: S01E05.ipynb  helper.py  main.py
S02E01/: README.md  config.py  helper.py  main.py
S02E02/: README.md  config.py  helper.py  main.py
S02E03/: README.md  agent.py  bonus.ipynb  bonus.py  config.py  helper.py  main.py  tools.py
S02E04/: agent.py  config.py  main.py  testing.ipynb  tools.py
S02E05/: agent.py  config.py  main.py  testing.ipynb  tools.py
S03E01/: bonus.py  config.py  main.py  tools.py
S03E02/: agent.py  bonus.py  config.py  main.py  tools.py
S03E03/: agent.py  bonus.py  config.py  main.py  tools.py
S03E04/: README.md  bonus.py  config.py  main.py  tools.py
S03E05/: README.md  agent.py  agent_path.py  bonus.py  config.py  main.py  tools.py
S04E01/: agent.py  bonus.py  config.py  main.py  tools.py
S04E02/: README.md  agent.py  config.py  main.py  tools.py
S04E03/: README.md  config.py  main.py  tools.py
S04E04/: config.py  main.py  tools.py
S04E05/: .a.py  README.md  agent.py  config.py  main.py  tools.py
(+20090 files in other folders)
