[project]
name = "zadania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "chardet>=7.0.1",
    "fastapi>=0.135.1",
    "haversine>=2.9.0",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "uvicorn>=0.42.0",
]
