[project]
name = "zadania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=2.6.0",
    "elevenlabs>=2.41.0",
    "fastapi>=0.135.2",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.42.0",
]
